--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ github_username: dandygithub
 baseurl: ""
 url: "https://dandygithub.github.io"
 
-theme: jekyll-theme-modernist
+theme: jekyll-theme-cayman
